installdir = $(pkglibdir)/python/Components

SUBDIRS = Sources Converter Renderer

install_PYTHON = \
	About.py              ConfigList.py        FIFOList.py       __init__.py      PackageInfo.py          RcModel.py          ServiceEventTracker.py  Task.py          VideoWindow.py \
	ActionMap.py          config.py            FileList.py       InputDevice.py   MediaPlayer.py   ParentalControlList.py  RecordingConfig.py  ServiceList.py          TimerList.py         VolumeBar.py \
	AVSwitch.py           Console.py           GUIComponent.py   InputHotplug.py  MenuList.py      ParentalControl.py      ServicePosition.py      TimerSanityCheck.py  VolumeControl.py \
	BlinkingPixmap.py     Converter            GUISkin.py        Input.py         MovieList.py     PerServiceDisplay.py    ResourceManager.py  ServiceScan.py          Timezones.py \
	Button.py             DiskInfo.py          Harddisk.py       Ipkg.py          MultiContent.py  Pixmap.py               RFmod.py            SetupDevices.py         TunerInfo.py \
	ChoiceList.py         DreamInfoHandler.py  HdmiCec.py        Keyboard.py      Netlink.py       Playlist.py             Scanner.py          Slider.py               TuneTest.py \
	Clock.py              Element.py           HelpMenuList.py   Label.py         Network.py       PluginComponent.py      ScrollLabel.py      Sources                 UsageConfig.py \
	components.py         EpgList.py           HTMLComponent.py  Language.py      NimManager.py    PluginList.py           SelectionList.py    SystemInfo.py           VariableText.py \
	ConditionalWidget.py  FanControl.py        HTMLSkin.py       Lcd.py           opkg.py          ProgressBar.py          Sensors.py          SystemInfo.py.          VariableValue.py
