installdir = $(pkglibdir)/python/Screens

install_PYTHON = \
		About.py AudioSelection.py AutoCardReg.py AutoDiseqc.py ChangeRCU.py ChannelSelection.py ChoiceBox.py Ci.py CiSetup.py \
		ClockDisplay.py ConfigMenu.py Console.py CopyFiles.py DefaultWizard.py Dish.py DVD.py EpgSelection.py EventView.py \
		FactoryReset.py FixedMenu.py Globals.py HarddiskSetup.py HelpMenu.py InfoBarGenerics.py InfoBar.py __init__.py InputBox.py \
		InputDeviceSetup.py InstallWizard.py Ipkg.py LanguageSelection.py LocationBox.py Menu.py MessageBox.py MinuteInput.py ModeSetup.py \
		MovieSelection.py Mute.py NetworkSetup.py NumericalTextInputHelpDialog.py ParentalControlSetup.py PasswordBox.py PictureInPicture.py \
		PiPSetup.py PluginBrowser.py PVRState.py Rc.py RdsDisplay.py RecordPaths.py Satconfig.py ScanSetup.py Scart.py Screen.py ScreenSaver.py \
		ServiceInfo.py ServiceScan.py ServiceStopScreen.py SessionGlobals.py Setup.py SimpleSummary.py SleepTimerEdit.py SoftwareUpdate.py Standby.py \
		StartWizard.py SubservicesQuickzap.py SubtitleDisplay.py TaskView.py TestMenu.py TextBox.py TimeDateInput.py TimerEdit.py TimerEntry.py TimerSelection.py \
		UnhandledKey.py Update.py VirtualKeyBoard.py Volume.py WizardLanguage.py Wizard.py 
