installdir = $(pkglibdir)/python/Components/Converter

install_PYTHON = \
	AC3DownMixStatus.py \
	AlwaysTrue.py \
	Bitrate2.py \
	CaidBar.py \
	CaidInfo2.py \
	CamdInfo3.py \
	ChannelNumbers.py \
	ClockToText.py \
	Combine.py \
	ConditionalShowHide.py \
	ConfigEntryTest.py \
	Converter.py \
	ConverterRotator.py \
	CpuUsage.py \
	CryptoInfo.py \
	DiskInfo.py \
	EcmInfoLine.py \
	EmuName.py \
	EventName2.py \
	EventName.py \
	EventTime.py \
	ExtraNumText.py \
	FanTempInfo.py \
	FrontendInfo2.py \
	FrontendInfo.py \
	genre.py \
	__init__.py \
	IsNet.py \
	MemoryInfo.py \
	MenuEntryCompare.py \
	MovieInfo.py \
	PliExtraInfo.py \
	Poll.py \
	ProgressDiskSpaceInfo.py \
	ProgressToText.py \
	RdsInfo.py \
	RefString.py \
	RemainingToText.py \
	RouteInfo.py \
	RWeather.py \
	SensorToText.py \
	ServiceInfo2.py \
	ServiceInfoEX.py \
	ServiceInfoEX.py_ \
	ServiceInfo.py \
	ServiceName2.py \
	ServiceName.py \
	ServiceOrbitalPosition2.py \
	ServiceOrbitalPosition.py \
	ServicePosition.py \
	ServiceTime.py \
	StaticMultiList.py \
	StaticText.py \
	Streaming.py \
	StringList.py \
	StringListSelection.py \
	TemplatedMultiContent.py \
	TextCase.py \
	TunerBar.py \
	TunerInfo.py \
	ValueBitTest.py \
	ValueRange.py \
	ValueToPixmap.py \
	WiFiInfo.py \
	YWeather.py

install_DATA = \
	bitratecalc.so
