installdir = $(pkglibdir)/python/Components/Renderer

install_PYTHON = \
	Canvas.py \
	ChannelNumber.py \
	FixedLabel.py \
	FrontpanelLed.py \
	__init__.py \
	LabelDuoColors.py \
	Label.py \
	Listbox.py \
	NextEpgInfo.py \
	Picon.py \
	PiconUni.py \
	Pig.py \
	Pixmap.py \
	PositionGauge.py \
	Progress.py \
	Renderer.py \
	RendVolumeText.py \
	VideoSize.py \
	Watches.py

install_DATA = \
	CoolNextEvent.pyo CoolPico.pyo
