installdir = $(pkglibdir)/python/Plugins/Extensions/AutoBouquets

SUBDIRS = images locale providers scanner    

install_PYTHON = \
				about.pyo \
				hidesections.pyo \
				__init__.pyo \
				keepbouquets.pyo \
				log.pyo \
				menu.pyo \
				ordering.pyo \
				plugin.pyo \
				setup.pyo \
				version.pyo 

install_DATA = LICENSE LICENSE.GPLv2  
