installdir = $(pkglibdir)/python/Plugins/Extensions/iSettingE2

SUBDIRS =Buttons Conf Fonts Icons Skins po

install_PYTHON = \
		__init__.pyo \
		plugin.pyo \
		Setting_About.pyo \
		Setting_Ads.pyo \
		Setting_Auth.pyo \
		Setting_Autotimer.pyo \
		Setting_Backup.pyo \
		Setting_Cl.pyo \
		Setting_Conf.pyo \
		Setting_Dgtv.pyo \
		Setting_DiskInfo.pyo \
		Setting_Fonts.pyo \
		Setting_InfoTuner.pyo \
		Setting_Lcn.pyo \
		Setting_Librerie.pyo \
		Setting_LkAgt.pyo \
		Setting_Local.pyo \
		Setting_Maintain.pyo \
		Setting_MesBox.pyo \
		Setting_PgUpdate.pyo \
		Setting_ScanSetup.pyo \
		Setting_Selection.pyo \
		Setting_StartMenu.pyo \
		Setting_Thread.pyo \
		Setting_Upgrade.pyo

install_DATA = \
				IconPluginError.png \
				IconPlugin.png \
				keymap.xml \
				NewAggPlug 
