installdir = $(pkglibdir)/python/Plugins/Extensions/AutoBouquets/providers

install_DATA = \
			   austriasat.xml \
			   canaldigitaal_hd.xml \
			   canaldigitaal_sd.xml \
			   czech_republic.xml \
			   freesat.xml \
			   mobistar_fr.xml \
			   mobistar_nl.xml \
			   skyie.xml \
			   skyit.xml \
			   sky_scotland.xml \
			   skyuk.xml \
			   slovak_republic.xml \
			   telesat_hd.xml \
			   telesat_sd.xml \
			   tvsat.xml \
			   tvvlaanderen_hd.xml \
			   tvvlaanderen_sd.xml 
