installdir = $(pkglibdir)/python/Plugins/Extensions/AutoBouquets/scanner

install_DATA = \
			   bouquetsreader.pyo \
			   bouquetswriter.pyo \
			   dvbscanner.pyo \
			   freesat_regions_extractor.pyo \
			   __init__.pyo \
			   main.pyo \
			   manager.pyo \
			   providerconfig.pyo \
			   providers.pyo \
			   dvbreader.so
