installdir = $(libdir)/enigma2/python/Plugins/Extensions/Epanel/images

install_DATA = \
2boom.png     cardact.png    cron.png     epg.png    info2.png    ipk4.png     kernelminimem.png  ntpact.png   script.png      softcam.png     swap.png     tarmini.png  unisw.png   yellow.png \
addon.png     cardmini.png   drop.png     epp2.png   info.png     ipkact.png   kernelmini.png     ntpmini.png  servact.png     soft.png        system2.png  tar.png      unusb.png \
ambamini.png  crashmini.png  emuact.png   green.png  install.png  ipkmini.png  kernel.png         ntp.png      serviceman.png  swapminion.png  system.png   tools.png    usbico.png \
blue.png      crash.png      emumini.png  hosts.png  ipk3.png     ipk.png      red.png      serv.png        swapmini.png    taract.png   tpmini.png   vset.png
