installdir = $(pkglibdir)/python/Plugins/Extensions/MyTube/img

install_PYTHON = \
			barrafondo2fs8.png  chmas_b-fs8.png  fondo-fs8.png   list_bg.png        mytubemain_bg.png  plugin.png       seleccion25-fs8.png          suggestions_bg.png   youtubev-fs8.png \
			blue.png            chmas-fs8.png    green.png       list_sel.png       nmcfs8.png         red.png          seleccion75-fs8.png          titulov-fs8.png \
			bordeb-fs8.png      chmenos-fs8.png  info_h-fs8.png  logospaze-fs8.png  okfs8.png          scr225-fs8.png   silhouette250-vflEqxKg9.png  vk.png \
			bordebuscar.png     flechas-fs8.png  info.png        ok_hs-fs8.png      scr325-fs8.png   starsbar_empty.png           yellow.png \
			bordev-fs8.png      fondo75-fs8.png  info_s-fs8.png  menu.png           photo.jpg          scrmain-fs8.png  starsbar_filled.png          youtubelogo-fs8.png
