installdir = $(pkglibdir)/python/Plugins/Extensions/iSettingE2/Buttons

install_DATA = \
		background.png \
		BannerVTi.png \
		bar_ber.png \
		bar_blue.png \
		bar_green.png \
		bar_red.png \
		bar_snr.png \
		bar_yellow.png \
		closebox.png \
		colorbar.png \
		endbar.png \
		fr_bar.png \
		fr_mainX.png \
		fr_mainY.png \
		fr_mainZ.png \
		ico_sat.png \
		ico_telnet.png \
		key_0.png \
		key_blue.png \
		key_epg.png \
		key_info.png \
		ls1120x28.png \
		maxbar.png \
		mini_progress_red.png \
		openbox.png \
		progress_big_blue.png \
		progress_big_red.png \
		progress_small_blue.png \
		progress_small_orange.png \
		Skin_Plugin_Cl.png \
		smflogo.png \
		tv_b_bar.png
