installdir = $(pkglibdir)/python/Plugins/Extensions/iSettingE2/Icons

SUBDIRS = VirtualKB

install_DATA = \
			cable_m.png \
			cable.png \
			clock_off.png \
			clock_on.png \
			DownloadPlugin.png \
			DownloadSetting.png \
			dtt_m.png \
			dtt.png \
			input_error_128px.png \
			input_error.png \
			input_esc_blue_128px.png \
			input_esc_red_128px.png \
			input_esc_yellow_128px.png \
			input_info_128px.png \
			input_info.png \
			input_question_128px.png \
			input_question.png \
			input_wait_128px.png \
			network_error.png \
			PayPal.png \
			sat_m.png \
			sat.png
