installdir = $(pkglibdir)/python/Plugins/Extensions/iSettingE2/Skins

install_DATA = \
			About.xml \
			AuthCredent.xml \
			Backup.xml \
			ChangeLog.xml \
			Console.xml \
			HttpProxy.xml \
			LcnScanner.xml \
			Main.xml \
			Makefile.am \
			MessBox.xml \
			MiniBox.xml \
			ReadmeFile.xml \
			Selection.xml \
			ServiceScan.xml \
			UpgradePlugin.xml \
			VirtualKeyBoard.xml
