installdir = $(pkglibdir)/python/Plugins/Extensions/iSettingE2/Icons/VirtualKB

install_DATA = \
			vkey_backspace.png \
			vkey_bg.png \
			vkey_clr.png \
			vkey_esc.png \
			vkey_icon.png \
			vkey_left.png \
			vkey_ok.png \
			vkey_right.png \
			vkey_sel.png \
			vkey_shift.png \
			vkey_shift_sel.png \
			vkey_space.png \
			vkey_text.png
