installdir = $(pkglibdir)/python/Plugins/Extensions/MyTube/skins/default/MyTube

install_DATA = \
		barrafondo2fs8.png  bordev-fs8.png   flechas-fs8.png  green.png    list_sel.png       menu.png           plugin.png           seleccion75-fs8.png  suggestions_bg.png  youtubelogo-fs8.png \
		blue.png            chmas-fs8.png    fondo75-fs8.png  info.png     logospaze-fs8.png  mytubemain_bg.png  red.png              starsbar_empty.png   titulov-fs8.png     youtubev-fs8.png \
		bordeb-fs8.png      chmenos-fs8.png  fondo-fs8.png    list_bg.png  Makefile.am        nmcfs8.png         seleccion25-fs8.png  starsbar_filled.png  yellow.png
